fix width bug on mobile

--- a/src/stylesheets/variables.less
+++ b/src/stylesheets/variables.less
@@ -15,6 +15,7 @@
 @remaining-height: (@header-height + 2 * @header-padding) + @footer-height;
 @conversation-height: calc(@widget-height - @remaining-height);
 @conversation-height-mobile: ~"calc(100%  - @{remaining-height})";
+@conversation-width-mobile: 100%;
 
 @logo-margin: ~"calc(50% - 100px)";
 
